# 74HC-CPU

./: .gitignore  .gitmodules  3and.gerberset  74hcpu.html  CPU.graphml  README.md  autor.bat  bin.gerberset  cpu.dia  cpu2.dia  lexeme.txt  panels.txt  short.txt  tacts.dia  todo.txt  todo2.txt  uno.gerberset  want.txt  wires.txt
!Ports/: Ports.net  Ports.pro  Ports.sch
!ROM/: ROM.kicad_pcb  ROM.rules  ROM.sch
273/: 273-cache.lib  273.kicad_pcb  273.kicad_pcb-bak  273.net  273.sch  273.sch-bak
273wLED/: 273-cache.lib  273.sch
ADD/: ADD-cache.lib  ADD.kicad_pcb  ADD.kicad_pcb-bak  ADD.net  ADD.pro  ADD.rules  ADD.sch  ADD.sch-bak
ALU/: ALU-cache.lib  ALU.dsn  ALU.kicad_pcb  ALU.kicad_pcb-bak  ALU.net  ALU.pro  ALU.rules  ALU.sch  ALU.sch-bak  ALU.ses
AND/: AND-cache.lib  AND.dsn  AND.kicad_pcb  AND.kicad_pcb-bak  AND.net  AND.pro  AND.sch  AND.sch-bak  AND.ses  fp-info-cache
AND_SMD/: AND-cache.lib  AND.kicad_pcb  AND.kicad_pcb-bak  AND.net  (+3 more)
soft/asm/: CMakeLists.txt  asm.cc  asm.h  asm.py  assm.cc  assm.h  build.bat  build_ut.bat  cdbg.py  cmd_size.asm  cpu.py  equ_label.asm  error_collector.cc  error_collector.h  file_reader.cc  file_reader.h  first_label.asm  last_label.asm  main.cc  mixed_up.asm  nums.asm  preprocessor.cc  preprocessor.h  regs.asm  str_util.cc  str_util.h  tab.asm  test.asm  trim.cc  trim.h  unit_tests.cc  unit_tests_cop.cc  unit_tests_names.cc  unit_tests_preprocessor.cc  ut.py  util_unit_tests.cc
soft/asm/t/: all_ok.asm
soft/asm/tests/: addc.asm  bubble.asm  bubble2.asm  cmd_size.asm  cmul.asm  fact.asm  ram.asm  sie.asm  transf.asm
(+1271 files in other folders)
